2017-01-26:
  - Fixed some bugs in predict models for `mclogit` objects.
  - Made sure that dummy coding is used for response factors even if they are ordinal

2017-01-07:
  - Implemented random slopes for baseline logit models.

2017-01-05:
  - Implemented random slopes for conditional logit models.

2016-09-01:
  - Fixed `mclogit.fit()` and `predict.mclogit()` to work better without covariates.

2016-02-07:
  - Explicitely import package "methods"

2016-01-17:
  - Import `as` from package "methods".
  - Make sure `nobs` is defined in `mclogit.fit.rePQL`.

2016-01-16:
  - Updated `DESCRIPTION` file: Maintainer email address changed and no "This package"
    at start of package discriptions.

2015-10-08:
  - Fix display of number of observations
  - Drop redundant coefficients

2015-08-01:
  - Added row and column names to estimator result of `vcov()`
  - Make sure that scripts run with "mclogit" loaded by `devtools::load_all()`

2015-07-15:
  - mclogit, mclogit.fit: Added support for starting values.

2015-07-03:
  - predict.mblogit: 'contrasts.arg' not 'contast.arg' ...
  - predict-methods now should handle NAs in newdata arguments better.

2015-06-17:
  - Corrected handling of weights and standard errors of prediction.

2015-06-15:
  - 'getSummary' methods now return "contrasts" and "xlevels" components.
  - Fixed prediction method for 'mclogit' results.
  - Added 'fitted' and 'predict' methods for 'mblogit' results.

2015-01-25:
  - Added support for multinomial baseline logit models in form of 'mblogit' as a frontend to 'mclogit.fit'

2015-01-23:
  - Added URLs to DESCRIPTION file

2015-01-21:
  - Added `nobs` and `extractAIC` methods for `mclogit` objects, so that `drop1.default` should work with these.

2015-01-19:
  - Added call to result of `getSummary.mclogit`.

2015-01-18:
  - Cleanup of NAMESPACE file; added aliases to methods for `mclogit` objects so that users can see that they are present.